--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Favorite Holiday</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="Favorite Holiday.css" />
   </head>
   <body>
     <header></header>
@@ -35,24 +35,24 @@
         <div class="top-5-destination">
             <ol>
                 <li class="item-1"><img src="https://source.unsplash.com/300x300/?waterfall" alt="waterfall-picture">
-                    <p><h3>Watefalls</h3>
+                    <p><h3><b>Watefalls</b></h3>
                         Set at a height of 4,225 m (13,862 ft) in Eastern Ladakh, the Pangong Tso lake extends from India to Tibet. Out of the 604 sq km area of the lake, one-third part lies in India while the rest of it is in Tibet.</p>
                     </p>
                 </li>
                 <li class="item-2"><img src="https://source.unsplash.com/300x300/?lake" alt="lake-picture">
-                <p><h3>PANGONG TSO LAKE</h3>
+                <p><h3><b>PANGONG TSO LAKE</b></h3>
                     Set at a height of 4,225 m (13,862 ft) in Eastern Ladakh, the Pangong Tso lake extends from India to Tibet. Out of the 604 sq km area of the lake, one-third part lies in India while the rest of it is in Tibet.</p>
                 </p></li>
                 <li class="item-3"><img src="https://source.unsplash.com/300x300/?Monastery" alt="Monastery-picture">
-                    <p><h3>HEMIS MONASTERY</h3>
+                    <p><h3><b>HEMIS MONASTERY</b></h3>
                         Set at a height of 4,225 m (13,862 ft) in Eastern Ladakh, the Pangong Tso lake extends from India to Tibet. Out of the 604 sq km area of the lake, one-third part lies in India while the rest of it is in Tibet.</p>
                     </p></li>
                 <li class="item-4"><img src="https://source.unsplash.com/300x300/?palace" alt="palace-picture">
-                    <p><h3>LEH PALACE</h3>
+                    <p><h3><b>LEH PALACE</b></h3>
                         Set at a height of 4,225 m (13,862 ft) in Eastern Ladakh, the Pangong Tso lake extends from India to Tibet. Out of the 604 sq km area of the lake, one-third part lies in India while the rest of it is in Tibet.</p>
                     </p></li>
                 <li class="item-5"><img src="https://source.unsplash.com/300x300/?stupa" alt="stupa-picture">
-                    <p><h3>SHANTI STUPA</h3>
+                    <p><h3><b>SHANTI STUPA</b></h3>
                         Set at a height of 4,225 m (13,862 ft) in Eastern Ladakh, the Pangong Tso lake extends from India to Tibet. Out of the 604 sq km area of the lake, one-third part lies in India while the rest of it is in Tibet.</p>
                     </p></li>
             </ol>
